swagger 중간 정리
